# python-packaging-guide

./: 02-virtual-environments.md  04-standard-library.md  05-import-standards.md  06-third-party-packages.md  07-code-review-checklist.md  GITHUB_SETUP.txt  README.md  pyproject.toml
docs/: 01-project-structure.md  03-dependency-management.md  08-quick-reference.md
src/my_package/: core.py
src/python_packaging_guide.egg-info/: SOURCES.txt  requires.txt
tests/: conftest.py  test_core.py
